2006-01-12 nowel <nowel@xole.net>

    * Oracle 利用可能になりました。(alpha)

2006-01-11 nowel <nowel@xole.net>

    * dbms.properties を変更しました。

2006-01-07 nowel <nowel@xole.net>

    * AnnotationReaderFactory を追加しました。
        Java 版 S2Dao 1.0.29 と同じ物です。 
        added
        - impl/S2Dao_FieldAnnotationReaderFactory
        - impl/S2Dao_FieldDaoAnnotationReader
        - impl/S2Dao_FieldBeanAnnotationReader
        - S2Dao_BeanAnnotationReader
        - S2Dao_AnnotationReaderFactory

2005-12-24 nowel <nowel@xole.net>

    * example/shelf_*.php を修正しました。
        プロパティ addtime が add*METHOD* に衝突するので
        prop_COLUMN プロパティを行うように修正しています。

    * TODO: add*** プロパティとメソッドの衝突に対する対処

2005-12-20 nowel <nowel@xole.net>

    * IDアノテーション COLUMN アノテーションに対応しました。

    * メソッド定義の修正
        Dao によって定義するメソッド定義を修正しました。

2005-12-14 nowel <nowel@xole.net>

    * PHP Archive Task を修正しました。
        - FilterChainを用いて比較的小さなpharファイルを作成することができます。
        - Windowsでの動作をサポートしました。(仮)

2005-12-10 nowel <nowel@xole.net>

    * PHP Archive Task を修正しました。
        付属のbuild.xmlを参考にしてください。

2005-12-09 nowel <nowel@xole.net>

    * Phing PHP Archive Task
        PHP Archive(phar) 化を行う Phing Task を作成しました。

    * S2Dao.PHP5-1.0.0-beta3 開発開始

2005-12-07 nowel <nowel@xole.net>

================ S2Dao.PHP5-1.0.0-beta2 更新履歴 ===================

    * PDO に対応しました。
        S2Dao.PHP5-1.0.0-beta2 が対応している DBMS は以下の通りです。
        - MySQL(mysql)
        - SQLite(sqlite)
        - PostgreSQL(pgsql)
    * _QUERY アノテーションに対応しました。
    * _SQL アノテーションに対応しました。
    * S2Dao_AbstractDaoを用いてEntityManagerに対応しました。
    * SQL コメント ELSE に対応しました。

    * S2DaoClassLoader を修正しました。
    * SQL コメントに関する処理を修正しました。
    * プリペアステートメントに関する処理を修正しました。
    * ResultSetHandler に関する処理を修正しました。

    * 各クラス及びファイルに S2Dao_ のプレフィックスを付けました。
    * __autoload()関数内に S2DaoClassLoader を含めなくてもよいように変更しました。
    * Array_ メソッドの戻り値を ArrayObject から array() に変更しました。
    * SSRMessages.propertiesを削除しメッセージファイルは DaoMessages.properties に変更しました。

    * 利用していないいくつかのファイルを削除しました。
