@@ -36,6 +36,9 @@
         <property name="dsn">"oci:dbname=//localhost/s2con"</property>
         <property name="user">"root"</property>
         <property name="password">"pass"</property>
+        <property name="option">
+            array(PDO::ATTR_ORACLE_NULLS => PDO::NULL_EMPTY_STRING);
+        </property>
     </component>
     -->
 
